# src/shared/infra/http/routes/suppliers.routes.ts
@@ -38,7 +38,7 @@ suppliersRoutes.get(
 );
 
 suppliersRoutes.delete(
-  "/",
+  "/:id",
   ensureAuthenticated,
   ensureExecutor,
   deleteSupplierController.handle
